# pervybot-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: rust-clippy.yml
containers/: Dockerfile
migrations/: 001_initial_migration.sql  001_owo.sql
pervy_jail/: Dockerfile  README.md
src/: commands.rs  database.rs  downloading.rs  external.rs  hashing.rs  main.rs
src/commands/: ping.rs  yt_dl.rs
src/downloading/: convert.rs  download.rs  external.rs  mod.rs  stream_data.rs  yt_dlp.rs
