[package]
name = "pervybot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = "0.11"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
regex = "1.6"
env-file-reader = "0.3"

lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
