[package]
name = "pervybot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = "0.11"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
dotenv = "0.15"
regex = "1.9"
env-file-reader = "0.3"

lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"

# For piping to ffmpeg
tokio-pipe = "0.2"
tokio-command-fds = "0.2.1"
# For downloading content streams
reqwest = "0.11"
# For validating user-inputed URLs
url = "2.4"
# For running commands asynchronously
# async-process = "1.5"
# For deserializing into types
serde = "1.0"
# For parsing info.json
serde_json = "1.0"
# For sanitizing saved files' names
sanitize-filename = "0.4.0"
# For parsing language identifiers
isolang = { version = "2.0", features = ["serde"] }
